@@ -1,5 +1,6 @@
 V4.1.3 (in progress)
 [BUG] : Correct bugs numbers: 1860, 2021 (see http://www.automne-cms.org/bug/)
+[BUG] : Correct a bug with atm-search-param tag when search type is item and value is block
 
 V4.1.2 (12/04/2011)
 [BUG] : Correct bugs numbers: 1916, 1860, 1861, 1837 (see http://www.automne-cms.org/bug/)
